CSS Fix for links z-index

--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -838,10 +838,10 @@ header .main-nav {
 
  a.has-new-window-popup-info,
 button.has-new-window-popup-info {
+  z-index:4;
   &:hover,
   &:focus,
   &:active {
-
     & > span.new-window-popup-info {
       width:15em;
       border:1px solid $blue;
